syntax = "proto3";

package btc.cap_table.v1;

message CapTable {
    repeated CapTableEntry entries = 1;
}

message CapTableEntry {
    string address = 1;
    uint64 amount = 2;
}

message Block {
    repeated Transaction tx = 1;
}

message Transaction {
    repeated Vout vout = 1;
}

message Vout {
    bytes script_pub_key = 1;
    double value = 2;
}